--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,10 +10,12 @@
   <title>{{metaTags.title}}</title>
   <meta name="description" content="{{metaTags.description}}">
   <meta name="keywords" content="{{metaTags.keywords}}">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|News+Cycle&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon_32-32.png">
 </head>
 
 <body>
+
   {{{body}}}
 </body>
 
