ready to be deployed

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 {{>header}}
 <main>
   <div id="wrapper">
-    <h1>Medium Javascript Scraper</h1>
+    <h1>NPR Technology Scraper</h1>
     <div id="articles">
       {{#each dbArticles}}
       <div class="article">
