--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -164,3 +164,29 @@ footer {
     color: white;
     padding: .75rem 1.5rem;
 }
+.emptyNotes {
+    margin: .5rem 0 1rem 0;
+}
+.noteForm {
+    display: flex;
+    width: 50%;
+    margin-top: .5rem;
+}
+.newNoteInput {
+    flex: 1;
+    background-color: white;
+    border-radius: .5rem;
+    border: solid .1rem rgb(185,46,0);
+}
+.addNewNote {
+    flex: none;
+}
+.noteHolder {
+    margin: .5rem 0;
+}
+.noteHolder p {
+    margin: 0 .5rem;
+}
+.existingNotes {
+    margin: .5rem 0;
+}
